Sonarqube qulaity changes